--- a/AK/AK1/src/SamochodGUI.form
+++ b/AK/AK1/src/SamochodGUI.form
@@ -99,7 +99,7 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Zwiększ"/>
+              <text value="Przyspiesz"/>
             </properties>
           </component>
           <component id="52fbf" class="javax.swing.JButton" binding="zmniejszButton" default-binding="true">
@@ -107,7 +107,7 @@
               <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Zmniejsz"/>
+              <text value="Zwolnij"/>
             </properties>
           </component>
           <component id="7b7de" class="javax.swing.JTextField" binding="textField1" default-binding="true">
@@ -142,7 +142,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value=""/>
+            </properties>
           </component>
         </children>
       </grid>
